--- a/main/templates/socials.html
+++ b/main/templates/socials.html
@@ -8,7 +8,15 @@
 {% block body %}
 <main>
   <div class="centered-block">
-    <!-- Add content here if necessary -->
+    <div class="social-links">
+      <a href="https://www.tiktok.com" target="_blank"><img src="{% static 'img/ic-tt.png' %}" alt="TikTok"></a>
+      <a href="https://telegram.org" target="_blank"><img src="{% static 'img/ic-tg.png' %}" alt="Telegram"></a>
+      <a href="https://discord.com" target="_blank"><img src="{% static 'img/ic-ds.png' %}" alt="Discord"></a>
+      <a href="https://twitter.com" target="_blank"><img src="{% static 'img/ic-x.png' %}" alt="X (Twitter)"></a>
+      <a href="https://instagram.com" target="_blank"><img src="{% static 'img/ic-ig.png' %}" alt="Instagram"></a>
+      <a href="https://facebook.com" target="_blank"><img src="{% static 'img/ic-fb.png' %}" alt="Facebook"></a>
+      <a href="https://youtube.com" target="_blank"><img src="{% static 'img/ic-yt.png' %}" alt="YouTube"></a>
+    </div>
   </div>
 </main>
 {% endblock %}
