--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -25,15 +25,14 @@ main {
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 0 250px;
 }
 
 .centered-block {
   padding: 32px 78px;
   border-radius: 40px;
-  background: url(/static/img/socials-bg.png) no-repeat center center/cover;
+  background: url(/static/img/socials-bg.png) no-repeat center;
   opacity: 0.5;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0px 15px rgba(0, 0, 0, 0.5);
   position: relative;
   display: flex;
   justify-content: center;
@@ -46,8 +45,8 @@ main {
 }
 
 .social-links a img {
-  width: 50px; /* Размер иконок */
-  height: 50px;
+  width: auto; /* Размер иконок */
+  height: auto;
   transition: transform 0.2s ease;
 }
 
