--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -28,7 +28,7 @@ main {
 .centered-block {
   padding: 32px 78px;
   border-radius: 40px;
-  background: url(/static/img/socials-bg.png) no-repeat center;
+  /*background: url(/static/img/socials-bg.png) no-repeat center;*/
   box-shadow: 0 0px 15px rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
@@ -47,6 +47,7 @@ main {
   width: auto; /* Размер иконок */
   height: auto;
   transition: transform 0.2s ease;
+  object-fit: contain; 
 }
 
 .social-links a img:hover {
