--- a/main/templates/socials.html
+++ b/main/templates/socials.html
@@ -9,13 +9,13 @@
 <main>
   <div class="centered-block">
     <div class="social-links">
-      <a href="https://www.tiktok.com" target="_blank"><img src="{% static 'img/ic-tt.png' %}" alt="TikTok"></a>
-      <a href="https://telegram.org" target="_blank"><img src="{% static 'img/ic-tg.png' %}" alt="Telegram"></a>
-      <a href="https://discord.com" target="_blank"><img src="{% static 'img/ic-ds.png' %}" alt="Discord"></a>
-      <a href="https://twitter.com" target="_blank"><img src="{% static 'img/ic-x.png' %}" alt="X (Twitter)"></a>
-      <a href="https://instagram.com" target="_blank"><img src="{% static 'img/ic-ig.png' %}" alt="Instagram"></a>
-      <a href="https://facebook.com" target="_blank"><img src="{% static 'img/ic-fb.png' %}" alt="Facebook"></a>
-      <a href="https://youtube.com" target="_blank"><img src="{% static 'img/ic-yt.png' %}" alt="YouTube"></a>
+      <a href="https://www.tiktok.com/@thequestgame?_t=8sJewdSN5QP&_r=1" target="_blank"><img src="{% static 'img/ic-tt.png' %}" alt="The Quest TikTok"></a>
+      <a href="https://t.me/thequestapp" target="_blank"><img src="{% static 'img/ic-tg.png' %}" alt="The Quest Telegram"></a>
+      <a href="https://discord.gg/Hx3xZu622x" target="_blank"><img src="{% static 'img/ic-ds.png' %}" alt="The Quest Discord"></a>
+      <a href="https://x.com/AppTheQuest" target="_blank"><img src="{% static 'img/ic-x.png' %}" alt="The Quest X (Twitter)"></a>
+      <a href="https://www.instagram.com/thequest_app/" target="_blank"><img src="{% static 'img/ic-ig.png' %}" alt="The Quest Instagram"></a>
+      <a href="https://www.facebook.com/profile.php?id=61571049321450" target="_blank"><img src="{% static 'img/ic-fb.png' %}" alt="The Quest Facebook"></a>
+      <a href="https://www.youtube.com/@TheQuestApp" target="_blank"><img src="{% static 'img/ic-yt.png' %}" alt="The Quest YouTube"></a>
     </div>
   </div>
 </main>
