--- a/main/templates/template.html
+++ b/main/templates/template.html
@@ -61,7 +61,7 @@
                             <img class="social-img" src="/static/img/social-ds-hover.png" alt="The Quest Discord">
                         </a>
                         <a href="https://x.com/AppTheQuest" class="social-item" target="_blank">
-                            <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X">
+                            <img class="social-img" src="/static/img/social-x-hover.png" alt="The Quest X (Twitter)">
                         </a>
                         <a href="https://www.facebook.com/profile.php?id=61571049321450" class="social-item" target="_blank">
                             <img class="social-img" src="/static/img/social-fb-hover.png" alt="The Quest Facebook">
