--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -15,6 +15,7 @@ body, html {
   height: 100vh;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 main {
@@ -82,12 +83,12 @@ main {
   .centered-block {
     padding: 20px;
     border-radius: 20px;
-    margin: 0 50px;
+    margin: 0 75px;
   }
 
   .social-links a img {
-    width: 50px; /* Уменьшаем размер иконок на маленьких экранах */
-    height: 50px;
+    width: 75px; /* Уменьшаем размер иконок на маленьких экранах */
+    height: 75px;
   }
 
   .social-links {
@@ -99,7 +100,7 @@ main {
 @media (max-width: 480px) {
 
   .centered-block {
-    margin: 0 20px;
+    margin: 0 30px;
   }
 
   .social-links a img {
