--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -4,6 +4,15 @@
   --color-secondary: #7d7d7d;
   --color-accent: #ffce00;
   --font-family: 'Chakra Petch', sans-serif;
+
+  --font-size-title: clamp(2.5rem, 5vw, 6rem);
+  --font-size-text: 1.5rem;
+  --font-size-date: 1.25rem;
+
+  --spacing-small: 10px;
+  --spacing-medium: 25px;
+  --spacing-large: 50px;
+  --spacing-xlarge: 200px;
 }
 
 body, html {
@@ -24,6 +33,23 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.news__back-link {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--color-accent);
+  font-size: var(--font-size-text);
+  margin-bottom: var(--spacing-medium);
+}
+
+.news__back-icon {
+  margin-right: var(--spacing-small);
+  stroke: currentColor;
+  stroke-width: 2;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .centered-block {
