--- a/main/templates/info_center.html
+++ b/main/templates/info_center.html
@@ -62,7 +62,7 @@
                             <button class="news-button small" onclick="shareNews('{{ socials_url }}')">
                                 <img src="{% static 'img/icon-share.svg' %}" alt="Share">
                             </button>                                    
-                            <a href="{% url 'socials_page' %}" class="socials-button open">Subscribe</a>
+                            <a href="{% url 'socials_page' %}" class="socials-button open">Follow Us</a>
                         </div>
                     </div>
                 </div>
