--- a/main/templates/map.html
+++ b/main/templates/map.html
@@ -58,8 +58,8 @@
       </p>
     </div>
     <div class="privacy-block">
-      <a href="/ssse">Job openings</a>
-      <a href="/privacy_policy/">Privacy & Policy</a>
+      <a href="{% url 'jobs_page' %}">Job openings</a>
+      <a href="{% url 'privacy_policy' %}">Privacy & Policy</a>
     </div>
   </footer>
 {% endblock %}
