--- a/main/static/css/socials.css
+++ b/main/static/css/socials.css
@@ -2,7 +2,7 @@
   --color-background: #000000;
   --color-primary: #ffffff;
   --color-secondary: #7d7d7d;
-  --color-accent: #ffce00;
+  --color-accent: #ffffff;
   --font-family: 'Chakra Petch', sans-serif;
 
   --font-size-title: clamp(2.5rem, 5vw, 6rem);
