--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -28,7 +28,7 @@
       <div class="text-container">
         <h2 class="yellow">QUESTS</h2>
         <h1 class="yellow">Quests around the world!</h1>
-        <p>Lorem Ipsum has been the industry's standard dummy text since the 1500s, when an unknown printer took a galley of type and scrambled it...</p>
+        <p>Create your character and start an epic journey: explore locations worldwide, complete unique quests, and uncover hidden mysteries.</p>
         <div class="hashtags">
           <p>Physical activity</p>
           <p>Worldwide</p>
